--- a/public_html/css/top5-style.css
+++ b/public_html/css/top5-style.css
@@ -69,6 +69,9 @@ body {
   top: 90%;
   width: 100%;
   height: 10%;
+  text-align: center;
+  font-size: 30pt;
+  background-color: rgb(252, 164, 109);
 }
 
 #sidebar-heading {
